k8s/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.backend-rewrite: >
      {
        "Type": "forward",
        "ForwardConfig": {
          "TargetGroups": [
            {
              "ServiceName": "backend",
              "ServicePort": "5000"
            }
          ]
        }
      }
spec:
  ingressClassName: alb
  rules:
    - host: 52.20.22.156.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-rewrite
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
