k8s/ingress_notfunc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.backend-rewrite: >
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"backend","ServicePort":"5000"}]}}
spec:
  ingressClassName: alb
  rules:
    - host: 18.215.37.214.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                #name: backend
                name: backend-rewrite
                port:
                  #number: 5000
                  name: use-annotation
